# ddns

./: Cargo.toml  README.md
src/: duck_dns.rs  main.rs
