[package]
name = "ddns"
version = "0.1.0"
authors = ["Kevin Picot <kevin.picot@enlaps.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
uuid = "0.8.2"
